--- a/index.html
+++ b/index.html
@@ -1239,6 +1239,8 @@
 <span class='line-number'>40</span>
 <span class='line-number'>41</span>
 <span class='line-number'>42</span>
+<span class='line-number'>43</span>
+<span class='line-number'>44</span>
 </pre></td><td class='code'><pre><code class=''><span class='line'>
 </span><span class='line'>import java.io.FileOutputStream;
 </span><span class='line'>import java.io.IOException;
@@ -1280,6 +1282,8 @@
 </span><span class='line'>&gt;DecompressTest.java 
 </span><span class='line'>vi DecompressTest.java 
 </span><span class='line'>javac -cp `hadoop classpath`  DecompressTest.java 
+</span><span class='line'>export HADOOP_CLASSPATH=.
+</span><span class='line'># snappyfile on hdfs
 </span><span class='line'>hadoop DecompressTest /user/hive/t_ods_access_log2/month=201408/day=20140828/hour=2014082808/t_ods_access_log2-2014082808.our.snappy.1409187524328
 </span></code></pre></td></tr></table></div></figure>
 
