--- a/index.html
+++ b/index.html
@@ -2436,7 +2436,7 @@ root@K2:/overlay# rm -rf usr/lib/opkg
 
 <p>参考： <a href="https://wiki.openwrt.org/doc/howto/dropbear.public-key.auth">Dropbear public-key authentication HowTo</a></p>
 
-<blockquote><p>ssh <a href="&#109;&#97;&#105;&#x6c;&#x74;&#x6f;&#58;&#114;&#111;&#111;&#x74;&#64;&#49;&#57;&#50;&#x2e;&#49;&#54;&#x38;&#x2e;&#x31;&#46;&#49;">&#114;&#111;&#111;&#x74;&#64;&#x31;&#x39;&#50;&#x2e;&#x31;&#54;&#56;&#x2e;&#x31;&#46;&#x31;</a> &ldquo;tee -a /etc/dropbear/authorized_keys&rdquo; &lt; ~/.ssh/id_rsa.pub</p></blockquote>
+<blockquote><p>ssh <a href="&#109;&#x61;&#x69;&#x6c;&#116;&#x6f;&#x3a;&#114;&#x6f;&#111;&#x74;&#64;&#49;&#x39;&#50;&#46;&#49;&#54;&#56;&#x2e;&#x31;&#46;&#49;">&#x72;&#x6f;&#x6f;&#116;&#64;&#49;&#57;&#50;&#46;&#49;&#54;&#56;&#46;&#x31;&#x2e;&#x31;</a> &ldquo;tee -a /etc/dropbear/authorized_keys&rdquo; &lt; ~/.ssh/id_rsa.pub</p></blockquote>
 
 <p>把 authorized_keys 文件移到 /etc/dropbear 下面就可以了！</p>
 
