--- a/index.html
+++ b/index.html
@@ -1893,6 +1893,8 @@
 <span class='line-number'>87</span>
 <span class='line-number'>88</span>
 <span class='line-number'>89</span>
+<span class='line-number'>90</span>
+<span class='line-number'>91</span>
 </pre></td><td class='code'><pre><code class=''><span class='line'>## 加入节点
 </span><span class='line'>[ec2-user@worker1 ~]$ sudo su -
 </span><span class='line'>[root@amazonlinux ~]# kubeadm join 192.168.191.131:6443 --token sj6fff.bpak7gkd3hnyzcm5 \
@@ -1925,8 +1927,9 @@
 </span><span class='line'>## 改了一下名，重启后不行了，重新加入
 </span><span class='line'>[ec2-user@worker1 ~]$ sudo su - 
 </span><span class='line'>Last login: Thu Mar 17 15:24:32 CST 2022 on pts/0
+</span><span class='line'>
 </span><span class='line'>[root@worker1 ~]# kubeadm join 192.168.191.131:6443 --token sj6fff.bpak7gkd3hnyzcm5 \
-</span><span class='line'>&gt;          --discovery-token-ca-cert-hash sha256:8e15649afc0771e80cce7f1dfdbb0933f4fdbd45ea1f9e03be1f3b78449a6d3c 
+</span><span class='line'>          --discovery-token-ca-cert-hash sha256:8e15649afc0771e80cce7f1dfdbb0933f4fdbd45ea1f9e03be1f3b78449a6d3c 
 </span><span class='line'>[preflight] Running pre-flight checks
 </span><span class='line'>        [WARNING FileExisting-tc]: tc not found in system path
 </span><span class='line'>        [WARNING Hostname]: hostname "worker1" could not be reached
@@ -1964,7 +1967,8 @@
 </span><span class='line'>The reset process does not clean your kubeconfig files and you must remove them manually.
 </span><span class='line'>Please, check the contents of the $HOME/.kube/config file.
 </span><span class='line'>
-</span><span class='line'>[root@worker1 ~]# kubeadm join 192.168.191.131:6443 --token sj6fff.bpak7gkd3hnyzcm5          --discovery-token-ca-cert-hash sha256:8e15649afc0771e80cce7f1dfdbb0933f4fdbd45ea1f9e03be1f3b78449a6d3c 
+</span><span class='line'>[root@worker1 ~]# kubeadm join 192.168.191.131:6443 --token sj6fff.bpak7gkd3hnyzcm5 \
+</span><span class='line'>         --discovery-token-ca-cert-hash sha256:8e15649afc0771e80cce7f1dfdbb0933f4fdbd45ea1f9e03be1f3b78449a6d3c 
 </span><span class='line'>[preflight] Running pre-flight checks
 </span><span class='line'>        [WARNING FileExisting-tc]: tc not found in system path
 </span><span class='line'>        [WARNING Hostname]: hostname "worker1" could not be reached
